# hedronic

./: .gitignore  NOTE.md  README.md  ROADMAP  TODO  TODO.md  package-lock.json  package.json  shell.sh  tsconfig.json  webpack.config.js
.github/workflows/: main.yml
data/: nodes.json
doc/: AWESOME.md  DESIGN.md  DONE.md  NOTE.md  OLD_TODO  log.md  shim-uml.ts
plugins/cpp-min-gf/: benchmark.html  cpp_min.js  cpp_min.wasm  demo.html  emscripten-whitelist.txt  extract-things.html  readme.md
plugins/rust-min-gf/: Cargo.toml
plugins/rust-minimum-gf/: readme.md
plugins/startin-gf/: Cargo.toml  LICENSE
plugins/startin-gf/demo/: index.html
plugins/startin-gf/src/: bindings.rs  lib.rs  triangulation.rs
plugins/std-gf/: Cargo.toml
public/: index.css  index.html  std.json  temp.txt
public/potree-applet/: potree.html
public/style/: main.css
side-projects/hello-wasm/: README.md
side-projects/temp/: save.js
src/: index.ts
src/action/: action.ts  history.ts
src/actions/: graph-actions.ts  graph-decoupler.ts  graph-history.ts
src/blueprints/: catalogue.ts  function-blueprint.ts  library.ts  variable-blueprint.ts
src/ctx/: ctx-app.ts  ctx-camera.ts  ctx-helpers.ts
src/elements/: cable.ts  chip.ts  graph.ts  node.ts  operation.ts
src/gizmos/: _gizmo.ts  all-gizmos.ts  button-gizmo.ts  in-gizmo.ts  out-gizmo.ts  preview-gizmo.ts
src/graph/: blueprint.ts  cable.ts  gizmo.ts  graph-conversion.ts  graph.ts  node-core.ts  node.ts  operation.ts  socket.ts  state.ts  widget.ts
src/html/: registry.ts  (+3 more)
std/: tsconfig.json
temp/: save.js  something
(+393 files in other folders)
