[package]
name = "startin-gf"
version = "0.3.0"
authors = ["Jos <me@josfeenstra.nl>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
startin = "0.6.0"
console_error_panic_hook = { version = "0.1.6", optional = true }
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
serde-wasm-bindgen = "0.4.3"
glam = "0.21.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
